--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://<USERNAME>.github.io/<REPOSITORY_NAME>'
+baseURL = "https://<USERNAME>.github.io/<REPOSITORY_NAME>"
 languageCode = 'en-us'
 title = "Dustin Turpin's Portfolio"
 theme = "toha"
